--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "expo": {
     "sdkVersion": "19.0.0"
   },
-  "name": "cmreactnative",
-  "displayName": "cm-react-native"
+  "name": "curbmap_react_native",
+  "displayName": "curbmap_react_native"
 }
