--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.1",
+    "react-native-action-button": "^2.7.2",
     "react-native-elements": "^0.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-native-maps": "^0.16.2",
