had to give the android version a very temporary API key to make the map render

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules/
 .expo/
 npm-debug.*
+
+android/build/
+android/app/build/
+
+ios/cmreactnative.xcodeproj/project.xcworkspace/xcuserdata/
