--- a/package.json
+++ b/package.json
@@ -17,8 +17,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.2.1",
+    "lodash": "^4.17.4",
+    "prettier-eslint": "^6.4.2",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.1",
+    "react-native": "0.47.1",
     "react-native-action-button": "^2.7.2",
     "react-native-elements": "^0.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
