--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-maps": "^0.16.2",
     "react-native-material-ui": "^1.12.0",
     "react-native-permissions": "^1.0.0",
+    "react-native-touchable-icons": "^0.1.0",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11"
   }
