--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-action-button": "^2.7.2",
     "react-native-elements": "^0.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
+    "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-maps": "^0.16.2",
     "react-native-material-ui": "^1.12.0",
     "react-native-permissions": "^1.0.0",
