--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "lodash": "^4.17.4",
     "prettier-eslint": "^6.4.2",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.13",
-    "react-dom": "16.0.0-alpha.13",
+    "react": "next",
+    "react-dom": "next",
     "react-native": "0.47.2",
     "react-native-action-button": "^2.7.2",
     "react-native-elements": "^0.16.0",
