--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ android/build/
 android/app/build/
 
 ios/cmreactnative.xcodeproj/project.xcworkspace/xcuserdata/
+ios/cmreactnative.xcodeproj/project.xcworkspace/xcuserdata/eliselkin.xcuserdatad/*
 
 ## Build generated
 build/
