--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ android/app/build/
 ios/cmreactnative.xcodeproj/project.xcworkspace/xcuserdata/
 ios/cmreactnative.xcodeproj/project.xcworkspace/xcuserdata/eliselkin.xcuserdatad/*
 ios/cmreactnative.xcodeproj/project.xcworkspace/
-
+main.jsbundle
 ## Build generated
 build/
 DerivedData/
