--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "exp": "^44.0.0",
+    "expo": "^21.0.2",
     "jest-expo": "~19.0.0",
     "react-test-renderer": "16.0.0-alpha.13"
   },
@@ -23,12 +25,13 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
+    "expo": "^21.0.2",
     "lodash": "^4.17.4",
     "prettier-eslint": "^6.4.2",
     "prop-types": "^15.5.10",
     "react": "next",
     "react-dom": "next",
-    "react-native": "0.47.2",
+    "react-native": "^0.47.2",
     "react-native-action-button": "^2.7.2",
     "react-native-elements": "^0.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.3.0",
